Diseno de las cards con responsive y ajuste a el responsive del slider

--- a/index.html
+++ b/index.html
@@ -83,33 +83,198 @@
         </div>
         <div class="service-card educational-card">
           <i class="fa-solid fa-graduation-cap"></i>
-          <h4>Conoce a nuestros cachorros!</h4>
+          <h4>Conoce más sobre tu mascota!</h4>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, adipisci!</p>
           <button>Contactanos hoy!</button>
         </div>
         <div class="service-card veterinary-card">
           <i class="fa-solid fa-user-nurse"></i>
-          <h4>Conoce a nuestros cachorros!</h4>
+          <h4>Agenda tu cita hoy!</h4>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, adipisci!</p>
           <button>Contactanos hoy!</button>
         </div>
       </section>
       <section class="products-container">
-        <div class="product-card"></div>
-        <div class="product-card"></div>
-        <div class="product-card"></div>
-        <div class="product-card"></div>
-        <div class="product-card"></div>
-        <div class="product-card"></div>
-        <div class="product-card"></div>
-        <div class="product-card"></div>
-        <div class="product-card"></div>
-        <div class="product-card"></div>
-        <div class="product-card"></div>
-        <div class="product-card"></div>
-        <div class="product-card"></div>
-        <div class="product-card"></div>
-        <div class="product-card"></div>
+        <div class="product-card">
+          <div class="product-image-container">
+            <img src="./images/product-image-food.webp" alt="Imagen de producto">
+            <button type="button" class="product-button">Comprar</button>
+          </div>
+          <div class="product-name-container">
+            <p><span>Monello cat salmón, atún y pollo 7 KG</span></p>
+          </div>
+          <div class="product-price-container">
+            <p><span>$ 125.000</span></p>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image-container">
+            <img src="./images/product-image-food.webp" alt="Imagen de producto">
+            <button type="button" class="product-button">Comprar</button>
+          </div>
+          <div class="product-name-container">
+            <p><span>Monello cat salmón, atún y pollo 7 KG</span></p>
+          </div>
+          <div class="product-price-container">
+            <p><span>$ 125.000</span></p>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image-container">
+            <img src="./images/product-image-food.webp" alt="Imagen de producto">
+            <button type="button" class="product-button">Comprar</button>
+          </div>
+          <div class="product-name-container">
+            <p><span>Monello cat salmón, atún y pollo 7 KG</span></p>
+          </div>
+          <div class="product-price-container">
+            <p><span>$ 125.000</span></p>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image-container">
+            <img src="./images/product-image-food.webp" alt="Imagen de producto">
+            <button type="button" class="product-button">Comprar</button>
+          </div>
+          <div class="product-name-container">
+            <p><span>Monello cat salmón, atún y pollo 7 KG</span></p>
+          </div>
+          <div class="product-price-container">
+            <p><span>$ 125.000</span></p>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image-container">
+            <img src="./images/product-image-food.webp" alt="Imagen de producto">
+            <button type="button" class="product-button">Comprar</button>
+          </div>
+          <div class="product-name-container">
+            <p><span>Monello cat salmón, atún y pollo 7 KG</span></p>
+          </div>
+          <div class="product-price-container">
+            <p><span>$ 125.000</span></p>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image-container">
+            <img src="./images/product-image-food.webp" alt="Imagen de producto">
+            <button type="button" class="product-button">Comprar</button>
+          </div>
+          <div class="product-name-container">
+            <p><span>Monello cat salmón, atún y pollo 7 KG</span></p>
+          </div>
+          <div class="product-price-container">
+            <p><span>$ 125.000</span></p>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image-container">
+            <img src="./images/product-image-food.webp" alt="Imagen de producto">
+            <button type="button" class="product-button">Comprar</button>
+          </div>
+          <div class="product-name-container">
+            <p><span>Monello cat salmón, atún y pollo 7 KG</span></p>
+          </div>
+          <div class="product-price-container">
+            <p><span>$ 125.000</span></p>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image-container">
+            <img src="./images/product-image-food.webp" alt="Imagen de producto">
+            <button type="button" class="product-button">Comprar</button>
+          </div>
+          <div class="product-name-container">
+            <p><span>Monello cat salmón, atún y pollo 7 KG</span></p>
+          </div>
+          <div class="product-price-container">
+            <p><span>$ 125.000</span></p>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image-container">
+            <img src="./images/product-image-food.webp" alt="Imagen de producto">
+            <button type="button" class="product-button">Comprar</button>
+          </div>
+          <div class="product-name-container">
+            <p><span>Monello cat salmón, atún y pollo 7 KG</span></p>
+          </div>
+          <div class="product-price-container">
+            <p><span>$ 125.000</span></p>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image-container">
+            <img src="./images/product-image-food.webp" alt="Imagen de producto">
+            <button type="button" class="product-button">Comprar</button>
+          </div>
+          <div class="product-name-container">
+            <p><span>Monello cat salmón, atún y pollo 7 KG</span></p>
+          </div>
+          <div class="product-price-container">
+            <p><span>$ 125.000</span></p>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image-container">
+            <img src="./images/product-image-food.webp" alt="Imagen de producto">
+            <button type="button" class="product-button">Comprar</button>
+          </div>
+          <div class="product-name-container">
+            <p><span>Monello cat salmón, atún y pollo 7 KG</span></p>
+          </div>
+          <div class="product-price-container">
+            <p><span>$ 125.000</span></p>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image-container">
+            <img src="./images/product-image-food.webp" alt="Imagen de producto">
+            <button type="button" class="product-button">Comprar</button>
+          </div>
+          <div class="product-name-container">
+            <p><span>Monello cat salmón, atún y pollo 7 KG</span></p>
+          </div>
+          <div class="product-price-container">
+            <p><span>$ 125.000</span></p>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image-container">
+            <img src="./images/product-image-food.webp" alt="Imagen de producto">
+            <button type="button" class="product-button">Comprar</button>
+          </div>
+          <div class="product-name-container">
+            <p><span>Monello cat salmón, atún y pollo 7 KG</span></p>
+          </div>
+          <div class="product-price-container">
+            <p><span>$ 125.000</span></p>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image-container">
+            <img src="./images/product-image-food.webp" alt="Imagen de producto">
+            <button type="button" class="product-button">Comprar</button>
+          </div>
+          <div class="product-name-container">
+            <p><span>Monello cat salmón, atún y pollo 7 KG</span></p>
+          </div>
+          <div class="product-price-container">
+            <p><span>$ 125.000</span></p>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image-container">
+            <img src="./images/product-image-food.webp" alt="Imagen de producto">
+            <button type="button" class="product-button">Comprar</button>
+          </div>
+          <div class="product-name-container">
+            <p><span>Monello cat salmón, atún y pollo 7 KG</span></p>
+          </div>
+          <div class="product-price-container">
+            <p><span>$ 125.000</span></p>
+          </div>
+        </div>
       </section>
       <section class="families-container slick-carousel">
         <div class="family-card">
