Responsive al navbar + animacion de toggle button para desplegar el menu y encerrar todas las funciones de JS en una sola

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
             </li>
           </ul>
         </div>
+        <div class="burguer-menu">
+          <div class="line-top"></div>
+          <div class="line-mid"></div>
+          <div class="line-bottom"></div>
+        </div>
       </div>
       <section class="hero-container">
         <div class="hero-information-container">
