creación de la vista de mascotas + estilos basicos de la misma, eliminación de archhivos locales para libreria Gsap para usar CDN's

--- a/index.html
+++ b/index.html
@@ -3,26 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mascotas</title>
+    <title>Pet Palace</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-
+    <link rel="icon" href="./images/logo.png">
 </head>
 <body>
     <main class="main-content">
       <div class="navbar-container">
         <div class="logo-container">
-          <h1>Pet Palace</h1>
+          <a href="./index.html"><h1>Pet Palace</h1></a>
         </div>
         <div class="nav-links">
           <ul>
             <li>
-              <a href="#">Link 1</a>
-              <a href="#">Link 2</a>
-              <a href="#">Link 3</a>
-              <a href="#">Link 4</a>
+              <a href="./pages/pets.html">Mascotas</a>
+              <a href="#">Productos</a>
+              <a href="#">Conocenos</a>
+              <a href="#footer">Contactanos</a>
             </li>
           </ul>
         </div>
@@ -304,7 +303,7 @@
           <img src="./images/family-3.jpg" alt="Imagen de familia">
         </div>
       </section>
-      <footer>
+      <footer id="footer">
         <div class="footer-information-container">
           <div class="footer-logo-container">
             <h2>Pet Palace</h2>
@@ -335,9 +334,8 @@
     </main>
 
     <script src="./js/app.js" defer></script>
-    <script src="./js/gsap.min.js"></script>
-    <script src="./js/ScrollTrigger.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
