creacion de las tags de la sección de mascotas + la opción de elegir ver caninos o felinos

--- a/pages/pets.html
+++ b/pages/pets.html
@@ -30,17 +30,62 @@
           <div class="line-bottom"></div>
         </div>
       </div>
-      <section class="pets-section">
-        <div class="pet-tag">
+
+      <div class="categories-section">
+        <div class="pet-tag dogs-tag">
           <p class="tag-text">Caninos</p>
         </div>
-        <div class="pet-tag">
+        <div class="pet-tag cats-tag">
           <p class="tag-text">Felinos</p>
         </div>
         <div class="pet-tag">
-          <p class="tag-text">Necesita ayuda?</p>
+          <p class="tag-text">Necesitas ayuda?</p>
+        </div>
+      </div>
+
+      <section class="pets-section">
+        <div class="dog-section-container">
+          <div class="dogs-section">
+            <div class="dog-tag"><span>Alaskan Malamute</span></div>
+            <div class="dog-tag"><span>Bernés de la Montaña</span></div>
+            <div class="dog-tag"><span>Bullmastiff</span></div>
+            <div class="dog-tag"><span>Cane Corso</span></div>
+            <div class="dog-tag"><span>Fila Brasilero</span></div>
+            <div class="dog-tag"><span>Gran Danés</span></div>
+            <div class="dog-tag"><span>Mastin Napolitano</span></div>
+            <div class="dog-tag"><span>Mastin Tibetano</span></div>
+            <div class="dog-tag"><span>San Bernardo</span></div>
+            <div class="dog-tag"><span>Terranova</span></div>
+            <div class="dog-tag"><span>Akita Americano</span></div>
+            <div class="dog-tag"><span>Golden Retriever</span></div>
+            <div class="dog-tag"><span>Labrador Retriever</span></div>
+            <div class="dog-tag"><span>Rottweiler</span></div>
+            <div class="dog-tag"><span>Dalmata</span></div>
+            <div class="dog-tag"><span>Beagle</span></div>
+            <div class="dog-tag"><span>American Bully</span></div>
+            <div class="dog-tag"><span>Shiba Inu</span></div>
+            <div class="dog-tag"><span>Shih Tzu</span></div>
+            <div class="dog-tag"><span>Pinscher</span></div>
+            <div class="dog-tag"><span>Bull Terrier</span></div>
+            <div class="dog-tag"><span>Corgi Gales De Cardigan</span></div>
+            <div class="dog-tag"><span>Fox Terrier</span></div>
+            <div class="dog-tag"><span>Boston Terrier</span></div>
+          </div>
+        </div>
+        <div class="cat-section-container">
+          <div class="cats-section">
+            <div class="cat-tag"><span>Bengali</span></div>
+            <div class="cat-tag"><span>British Shorthair</span></div>
+            <div class="cat-tag"><span>Esfinge (Sphynx)</span></div>
+            <div class="cat-tag"><span>Maine Coon</span></div>
+            <div class="cat-tag"><span>Persa</span></div>
+            <div class="cat-tag"><span>Ragdoll</span></div>
+            <div class="cat-tag"><span>Ruso Azul</span></div>
+            <div class="cat-tag"><span>Siames</span></div>
+          </div>
         </div>
       </section>
+
       <footer id="footer">
         <div class="footer-information-container">
           <div class="footer-logo-container">
