Creación de animaciones básicas para la sección de mascotas y responsive de la página en géneral + adición de contenidos de prueba para los tags de mascotas

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
           <ul>
             <li>
               <a href="./pages/pets.html">Mascotas</a>
-              <a href="#">Productos</a>
-              <a href="#">Conocenos</a>
+              <a href="./pages/products.html">Productos</a>
               <a href="#footer">Contactanos</a>
             </li>
           </ul>
@@ -81,21 +80,21 @@
       <section class="services-container">
         <div class="service-card pet-card">
           <i class="fa-solid fa-paw"></i>
-          <h4>Conoce a nuestros cachorros!</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, adipisci!</p>
-          <button>Contactanos hoy!</button>
+          <h4>Conoce a nuestros cachorros</h4>
+          <p>¡Tenemos una gran variedad de amiguitos que están impacientes por conocerte!</p>
+          <button>Contactanos hoy</button>
         </div>
         <div class="service-card educational-card">
           <i class="fa-solid fa-graduation-cap"></i>
-          <h4>Conoce más sobre tu mascota!</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, adipisci!</p>
-          <button>Contactanos hoy!</button>
+          <h4>Conoce más sobre tu mascota</h4>
+          <p>¡Con nuestros cursos online de cuidado podrás ayudar a tu mascota!</p>
+          <button>Contactanos hoy</button>
         </div>
         <div class="service-card veterinary-card">
           <i class="fa-solid fa-user-nurse"></i>
-          <h4>Agenda tu cita hoy!</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, adipisci!</p>
-          <button>Contactanos hoy!</button>
+          <h4>Agenda tu cita hoy</h4>
+          <p>¡Nuestros especialistas siempre están disponibles para atender a tu mascota!</p>
+          <button>Contactanos hoy</button>
         </div>
       </section>
       <section class="products-container">
@@ -294,13 +293,13 @@
           <img src="./images/family-4.jpg" alt="Imagen de familia">
         </div>
         <div class="family-card">
-          <img src="./images/family-1.jpg" alt="Imagen de familia">
+          <img src="./images/family-5.jpg" alt="Imagen de familia">
         </div>
         <div class="family-card">
-          <img src="./images/family-2.jpg" alt="Imagen de familia">
+          <img src="./images/family-6.jpg" alt="Imagen de familia">
         </div>
         <div class="family-card">
-          <img src="./images/family-3.jpg" alt="Imagen de familia">
+          <img src="./images/family-7.jpg" alt="Imagen de familia">
         </div>
       </section>
       <footer id="footer">
@@ -310,24 +309,24 @@
           </div>
           <div class="footer-contact-information">
             <h5>Contactanos</h5>
-            <p><span>3123123120</span></p>
-            <p><span>informacion@petpalace.com</span></p>
-            <p><span>Calle 13 #11-18 | Cogua | Cundinamarca | Colombia</span></p>
+            <a href="#"><span>3123123120</span></a>
+            <a href="#"><span>informacion@petpalace.com</span></a>
+            <a href="#"><span>Calle 13 #11-18 | Cogua | Cundinamarca | Colombia</span></a>
           </div>
           <div class="footer-products-information">
             <h5>Productos</h5>
-            <p><span>Comida</span></p>
-            <p><span>Cosmeticos</span></p>
-            <p><span>Salud</span></p>
+            <a href="./pages/products.html"><span>Comida</span></a>
+            <a href="./pages/products.html"><span>Cosmeticos</span></a>
+            <a href="./pages/products.html"><span>Salud</span></a>
           </div>
           <div class="footer-pets-information">
             <h5>Mascotas</h5>
-            <p><span>Caninos</span></p>
-            <p><span>Felinos</span></p>
-            <p><span>Nuestras Ofertas</span></p>
+            <a href="./pages/products.html"><span>Caninos</span></a>
+            <a href="./pages/products.html"><span>Felinos</span></a>
+            <a href="#"><span>Nuestras ofertas!</span></a>
           </div>
           <div class="footer-rights-container">
-            <p><span>Todos los derechos reservados | Pet Palace® 2024 | Desarrollado por 💮</span></p>
+            <p><span>Todos los derechos reservados | Pet Palace® 2024 | Desarrollado por Solaris</span></p>
           </div>
         </div>
       </footer>
