--- a/pages/pets.html
+++ b/pages/pets.html
@@ -17,9 +17,8 @@
         <div class="nav-links">
           <ul>
             <li>
-              <a href="#">Mascotas</a>
-              <a href="#">Productos</a>
-              <a href="#">Conocenos</a>
+              <a href="./pets.html">Mascotas</a>
+              <a href="./products.html">Productos</a>
               <a href="#footer">Contactanos</a>
             </li>
           </ul>
@@ -46,42 +45,56 @@
       <section class="pets-section">
         <div class="dog-section-container">
           <div class="dogs-section">
-            <div class="dog-tag"><span>Alaskan Malamute</span></div>
-            <div class="dog-tag"><span>Bernés de la Montaña</span></div>
-            <div class="dog-tag"><span>Bullmastiff</span></div>
-            <div class="dog-tag"><span>Cane Corso</span></div>
-            <div class="dog-tag"><span>Fila Brasilero</span></div>
-            <div class="dog-tag"><span>Gran Danés</span></div>
-            <div class="dog-tag"><span>Mastin Napolitano</span></div>
-            <div class="dog-tag"><span>Mastin Tibetano</span></div>
-            <div class="dog-tag"><span>San Bernardo</span></div>
-            <div class="dog-tag"><span>Terranova</span></div>
-            <div class="dog-tag"><span>Akita Americano</span></div>
-            <div class="dog-tag"><span>Golden Retriever</span></div>
-            <div class="dog-tag"><span>Labrador Retriever</span></div>
-            <div class="dog-tag"><span>Rottweiler</span></div>
-            <div class="dog-tag"><span>Dalmata</span></div>
-            <div class="dog-tag"><span>Beagle</span></div>
-            <div class="dog-tag"><span>American Bully</span></div>
-            <div class="dog-tag"><span>Shiba Inu</span></div>
-            <div class="dog-tag"><span>Shih Tzu</span></div>
-            <div class="dog-tag"><span>Pinscher</span></div>
-            <div class="dog-tag"><span>Bull Terrier</span></div>
-            <div class="dog-tag"><span>Corgi Gales De Cardigan</span></div>
-            <div class="dog-tag"><span>Fox Terrier</span></div>
-            <div class="dog-tag"><span>Boston Terrier</span></div>
+            <div class="dog-tag pet-tag">
+              <span>Alaskan Malamute</span>
+              <img src="../images/alaskan-malamute-tag.webp" alt="Imagen de Alaskan Malamute">
+            </div>
+            <div class="dog-tag pet-tag">
+              <span>Bernés de la Montaña</span>
+              <img src="../images/mountain-bernes-tag.webp" alt="Imagen de Bernés de la Montaña">
+            </div>
+            <div class="dog-tag pet-tag">
+              <span>Bullmastiff</span>
+              <img src="../images/bullmastiff-tag.webp" alt="Imagen de Bullmastiff">
+            </div>
+            <div class="dog-tag pet-tag">
+              <span>Cane Corso</span>
+              <img src="../images/carne-corso-tag.webp" alt="Imagen de Cane Corso">
+            </div>
+            <div class="dog-tag pet-tag"><span>Fila Brasilero</span></div>
+            <div class="dog-tag pet-tag"><span>Gran Danés</span></div>
+            <div class="dog-tag pet-tag"><span>Mastin Napolitano</span></div>
+            <div class="dog-tag pet-tag"><span>Mastin Tibetano</span></div>
+            <div class="dog-tag pet-tag"><span>San Bernardo</span></div>
+            <div class="dog-tag pet-tag"><span>Terranova</span></div>
+            <div class="dog-tag pet-tag"><span>Akita Americano</span></div>
+            <div class="dog-tag pet-tag"><span>Golden Retriever</span></div>
+            <div class="dog-tag pet-tag"><span>Labrador Retriever</span></div>
+            <div class="dog-tag pet-tag"><span>Rottweiler</span></div>
+            <div class="dog-tag pet-tag"><span>Dalmata</span></div>
+            <div class="dog-tag pet-tag"><span>Beagle</span></div>
+            <div class="dog-tag pet-tag"><span>American Bully</span></div>
+            <div class="dog-tag pet-tag"><span>Shiba Inu</span></div>
+            <div class="dog-tag pet-tag"><span>Shih Tzu</span></div>
+            <div class="dog-tag pet-tag"><span>Pinscher</span></div>
+            <div class="dog-tag pet-tag"><span>Bull Terrier</span></div>
+            <div class="dog-tag pet-tag"><span>Corgi Gales De Cardigan</span></div>
+            <div class="dog-tag pet-tag"><span>Fox Terrier</span></div>
+            <div class="dog-tag pet-tag"><span>Boston Terrier</span></div>
           </div>
         </div>
         <div class="cat-section-container">
           <div class="cats-section">
-            <div class="cat-tag"><span>Bengali</span></div>
-            <div class="cat-tag"><span>British Shorthair</span></div>
-            <div class="cat-tag"><span>Esfinge (Sphynx)</span></div>
-            <div class="cat-tag"><span>Maine Coon</span></div>
-            <div class="cat-tag"><span>Persa</span></div>
-            <div class="cat-tag"><span>Ragdoll</span></div>
-            <div class="cat-tag"><span>Ruso Azul</span></div>
-            <div class="cat-tag"><span>Siames</span></div>
+            <div class="cat-tag pet-tag">
+              <span>Bengali</span>
+            </div>
+            <div class="cat-tag pet-tag"><span>British Shorthair</span></div>
+            <div class="cat-tag pet-tag"><span>Esfinge (Sphynx)</span></div>
+            <div class="cat-tag pet-tag"><span>Maine Coon</span></div>
+            <div class="cat-tag pet-tag"><span>Persa</span></div>
+            <div class="cat-tag pet-tag"><span>Ragdoll</span></div>
+            <div class="cat-tag pet-tag"><span>Ruso Azul</span></div>
+            <div class="cat-tag pet-tag"><span>Siames</span></div>
           </div>
         </div>
       </section>
@@ -110,7 +123,7 @@
             <p><span>Nuestras Ofertas</span></p>
           </div>
           <div class="footer-rights-container">
-            <p><span>Todos los derechos reservados | Pet Palace® 2024 | Desarrollado por 💮</span></p>
+            <p><span>Todos los derechos reservados | Pet Palace® 2024 | Desarrollado por Solaris</span></p>
           </div>
         </div>
       </footer>
