Finalización de los contenidos de las secciones Caninos y Felinos

--- a/pages/pets.html
+++ b/pages/pets.html
@@ -31,13 +31,13 @@
       </div>
 
       <div class="categories-section">
-        <div class="pet-tag dogs-tag">
+        <div class="category-tag dogs-tag">
           <p class="tag-text">Caninos</p>
         </div>
-        <div class="pet-tag cats-tag">
+        <div class="category-tag cats-tag">
           <p class="tag-text">Felinos</p>
         </div>
-        <div class="pet-tag">
+        <div class="category-tag">
           <p class="tag-text">Necesitas ayuda?</p>
         </div>
       </div>
@@ -61,40 +61,122 @@
               <span>Cane Corso</span>
               <img src="../images/carne-corso-tag.webp" alt="Imagen de Cane Corso">
             </div>
-            <div class="dog-tag pet-tag"><span>Fila Brasilero</span></div>
-            <div class="dog-tag pet-tag"><span>Gran Danés</span></div>
-            <div class="dog-tag pet-tag"><span>Mastin Napolitano</span></div>
-            <div class="dog-tag pet-tag"><span>Mastin Tibetano</span></div>
-            <div class="dog-tag pet-tag"><span>San Bernardo</span></div>
-            <div class="dog-tag pet-tag"><span>Terranova</span></div>
-            <div class="dog-tag pet-tag"><span>Akita Americano</span></div>
-            <div class="dog-tag pet-tag"><span>Golden Retriever</span></div>
-            <div class="dog-tag pet-tag"><span>Labrador Retriever</span></div>
-            <div class="dog-tag pet-tag"><span>Rottweiler</span></div>
-            <div class="dog-tag pet-tag"><span>Dalmata</span></div>
-            <div class="dog-tag pet-tag"><span>Beagle</span></div>
-            <div class="dog-tag pet-tag"><span>American Bully</span></div>
-            <div class="dog-tag pet-tag"><span>Shiba Inu</span></div>
-            <div class="dog-tag pet-tag"><span>Shih Tzu</span></div>
-            <div class="dog-tag pet-tag"><span>Pinscher</span></div>
-            <div class="dog-tag pet-tag"><span>Bull Terrier</span></div>
-            <div class="dog-tag pet-tag"><span>Corgi Gales De Cardigan</span></div>
-            <div class="dog-tag pet-tag"><span>Fox Terrier</span></div>
-            <div class="dog-tag pet-tag"><span>Boston Terrier</span></div>
+            <div class="dog-tag pet-tag">
+              <span>Fila Brasilero</span>
+              <img src="../images/fila-brasilero-tag.webp" alt="Imagen de Fila Brasilero">
+            </div>
+            <div class="dog-tag pet-tag">
+              <span>Gran Danés</span>
+              <img src="../images/gran-danes-tag.webp" alt="Imagen de Gran Danés">
+            </div>
+            <div class="dog-tag pet-tag">
+              <span>Mastin Napolitano</span>
+              <img src="../images/mastin-napolitano-tag.webp" alt="Imagen de Mastin Napolitano">
+            </div>
+            <div class="dog-tag pet-tag">
+              <span>Mastin Tibetano</span>
+              <img src="../images/mastin-tibetano-tag.webp" alt="Imagen de Mastin Tibetano">
+            </div>
+            <div class="dog-tag pet-tag">
+              <span>San Bernardo</span>
+              <img src="../images/san-bernardo-tag.webp" alt="Imagen de San Bernardo">
+            </div>
+            <div class="dog-tag pet-tag">
+              <span>Terranova</span>
+              <img src="../images/terranova-tag.webp" alt="Imagen de Terranova">
+            </div>
+            <div class="dog-tag pet-tag">
+              <span>Akita Americano</span>
+              <img src="../images/akita-americano-tag.webp" alt="Imagen de Akita Americano">
+            </div>
+            <div class="dog-tag pet-tag">
+              <span>Golden Retriever</span>
+              <img src="../images/golden-retriever-tag.webp" alt="Imagen de Golden Retriever">
+            </div>
+            <div class="dog-tag pet-tag">
+              <span>Labrador Retriever</span>
+              <img src="../images/labrador-retriever-tag.webp" alt="Imagen de Labrador Retriever">
+            </div>
+            <div class="dog-tag pet-tag">
+              <span>Rottweiler</span>
+              <img src="../images/rottweiler-tag.webp" alt="Imagen de Rottweiler">
+            </div>
+            <div class="dog-tag pet-tag">
+              <span>Dalmata</span>
+              <img src="../images/dalmata-tag.webp" alt="Imagen de Dalmata">
+            </div>
+            <div class="dog-tag pet-tag">
+              <span>Beagle</span>
+              <img src="../images/beagle-tag.webp" alt="Imagen de Beagle">
+            </div>
+            <div class="dog-tag pet-tag">
+              <span>American Bully</span>
+              <img src="../images/american-bully-tag.webp" alt="Imagen de American Bully">
+            </div>
+            <div class="dog-tag pet-tag">
+              <span>Shiba Inu</span>
+              <img src="../images/shiba-inu-tag.webp" alt="Imagen de Shiba Inu">
+            </div>
+            <div class="dog-tag pet-tag">
+              <span>Shih Tzu</span>
+              <img src="../images/shih-tzu-tag.webp" alt="Imagen de Shih Tzu">
+            </div>
+            <div class="dog-tag pet-tag">
+              <span>Pinscher</span>
+              <img src="../images/pinscher-tag.webp" alt="Imagen de Pinscher">
+            </div>
+            <div class="dog-tag pet-tag">
+              <span>Bull Terrier</span>
+              <img src="../images/bull-terrier-tag.webp" alt="Imagen de Bull Terrier">
+            </div>
+            <div class="dog-tag pet-tag">
+              <span>Corgi Gales De Cardigan</span>
+              <img src="../images/corgi-gales-cardigan-tag.webp" alt="Imagen de Corgi Gales De Cardigan">
+            </div>
+            <div class="dog-tag pet-tag">
+              <span>Fox Terrier</span>
+              <img src="../images/fox-terrier-tag.webp" alt="Imagen de Fox Terrier">
+            </div>
+            <div class="dog-tag pet-tag">
+              <span>Boston Terrier</span>
+              <img src="../images/boston-terrier-tag.webp" alt="Imagen de Boston Terrier">
+            </div>
           </div>
         </div>
         <div class="cat-section-container">
           <div class="cats-section">
             <div class="cat-tag pet-tag">
               <span>Bengali</span>
+              <img src="../images/bengali-tag.webp" alt="Imagen de Gato Bengali">
             </div>
-            <div class="cat-tag pet-tag"><span>British Shorthair</span></div>
-            <div class="cat-tag pet-tag"><span>Esfinge (Sphynx)</span></div>
-            <div class="cat-tag pet-tag"><span>Maine Coon</span></div>
-            <div class="cat-tag pet-tag"><span>Persa</span></div>
-            <div class="cat-tag pet-tag"><span>Ragdoll</span></div>
-            <div class="cat-tag pet-tag"><span>Ruso Azul</span></div>
-            <div class="cat-tag pet-tag"><span>Siames</span></div>
+            <div class="cat-tag pet-tag">
+              <span>British Shorthair</span>
+              <img src="../images/british-shorthair-tag.webp" alt="Imagen de Gato British Shorthair">
+            </div>
+            <div class="cat-tag pet-tag">
+              <span>Esfinge (Sphynx)</span>
+              <img src="../images/sphynx-tag.webp" alt="Imagen de Gato Esfinge">
+            </div>
+            <div class="cat-tag pet-tag">
+              <span>Maine Coon</span>
+              <img src="../images/maine-coon-tag.webp" alt="Imagen de Gato Maine Coon">
+            </div>
+            <div class="cat-tag pet-tag">
+              <span>Persa</span>
+              <img src="../images/persa-tag.webp" alt="Imagen de Gato Persa">
+            </div>
+            <div class="cat-tag pet-tag">
+              <span>Ragdoll</span>
+              <img src="../images/ragdoll-tag.webp" alt="Imagen de Gato Ragdoll">
+            </div>
+            <div class="cat-tag pet-tag">
+              <span>Ruso Azul</span>
+              <img src="../images/azul-ruso-tag.webp" alt="Imagen de Gato Ruso Azul">
+            </div>
+            <div class="cat-tag pet-tag">
+              <span>Siames</span>
+              <img src="../images/siames-tag.webp" alt="Imagen de Gato Siames">
+            </div>
           </div>
         </div>
       </section>
